--- a/test.ini
+++ b/test.ini
@@ -2,30 +2,8 @@
 base = "rss/"
 
 [source001]
-name = "mckinsey_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
+name = "News_Minimalist.xml"
+url = "https://rss.beehiiv.com/feeds/4aF2pGVAEN.xml"
 max = "10"
-md5 = "f3462c41a743e58847e8abde6298e4af"
+md5 = ""
 action = "auto"
-
-[source002]
-name = "mckinsey_iw_rss.xml"
-url = "http://www.mckinsey.com/insights/rss"
-max = "10"
-md5 = "f3462c41a743e58847e8abde6298e4af"
-action = "en->iw"
-
-[source003]
-name = "nature_rss.xml"
-url = "http://rss.acast.com/nature"
-max = "10"
-md5 = "f4f2e22e58b8bd54b0dcc57b63f786b8"
-action = "auto"
-
-[source004]
-name = "BBC_Top_Stories_rss.xml"
-url = "http://feeds.bbci.co.uk/news/rss.xml"
-max = "10"
-md5 = "22e18cd5bbe62b56efbd4dbbe1127e7f"
-action = "auto"
-
