--- a/test.ini
+++ b/test.ini
@@ -5,6 +5,26 @@ base = "rss/"
 name = "News_Minimalist.xml"
 url = "https://rss.beehiiv.com/feeds/4aF2pGVAEN.xml"
 max = "10"
-md5 = "7f32d552aa87b5467bfbea54c8b3c149"
+md5 = ""
 action = "auto"
 
+[source002]
+name = "Ap_Top_News.xml"
+url = "https://rsshub.app/apnews/topics/ap-top-news"
+max = "50"
+md5 = ""
+action = "auto"
+
+[source003]
+name = "Ruters_World.xml"
+url = "https://rsshub.app/reuters/world"
+max = "50"
+md5 = ""
+action = "auto"
+
+[source004]
+name = "Ruters_China.xml"
+url = "https://rsshub.app/reuters/world/china"
+max = "50"
+md5 = ""
+action = "auto"
